# kivy_service_test

./: Justfile  Readme.md  buildozer.spec  main.py  pyproject.toml  service.py
